--- a/locales/de.json
+++ b/locales/de.json
@@ -1,4 +1,7 @@
 {
   "welcome": "Wilkommen in unserem App",
-  "languageSelect": "Wählen Sie Ihre Sprache"
+  "languageSelect": "Wählen Sie Ihre Sprache",
+  "project": {
+    "projects": "Projekte"
+  }
 }
