feat: added exp accordion along with extra images

--- a/locales/de.json
+++ b/locales/de.json
@@ -8,6 +8,9 @@
     "projects": "Projekte",
     "contact": "Kontakt"
   },
+  "experience": {
+    "experience": "Erfahrung"
+  },
   "project": {
     "projects": "Projekte"
   }
