feat:skills section added with interactivity

--- a/locales/de.json
+++ b/locales/de.json
@@ -13,5 +13,14 @@
   },
   "project": {
     "projects": "Projekte"
+  },
+  "skills": {
+    "skills": "Fähigkeiten",
+    "mainStack": "Haupt-Stack",
+    "tools": "Werkzeuge",
+    "database": "Datenbank",
+    "frameworks": "Bibliotheken und Frameworks",
+    "skillHoverAdmiral": "Wähle deinen Admiral. Fahren Sie mit der Maus über eine Fähigkeit",
+    "skillHoverCowboy": "Wähle deinen Cowboy. Fahren Sie mit der Maus über eine Fähigkeit"
   }
 }
