feat: added new contact section

--- a/locales/de.json
+++ b/locales/de.json
@@ -22,5 +22,8 @@
     "frameworks": "Bibliotheken und Frameworks",
     "skillHoverAdmiral": "Wähle deinen Admiral. Fahren Sie mit der Maus über eine Fähigkeit",
     "skillHoverCowboy": "Wähle deinen Cowboy. Fahren Sie mit der Maus über eine Fähigkeit"
+  },
+  "contact": {
+    "contact": "Kontakt"
   }
 }
