feat: added skeleton about section

--- a/locales/de.json
+++ b/locales/de.json
@@ -8,6 +8,9 @@
     "projects": "Projekte",
     "contact": "Kontakt"
   },
+  "about": {
+    "aboutMe": "Über mich"
+  },
   "experience": {
     "experience": "Erfahrung"
   },
