feat:accordian feature added to open source section

--- a/locales/en.json
+++ b/locales/en.json
@@ -26,6 +26,9 @@
     "skillHoverAdmiral": "Choose your admiral. Hover over a skill",
     "skillHoverCowboy": "Choose your cowboy. Hover over a skill"
   },
+  "openSource": {
+    "openSource": "Open Source Contributions"
+  },
   "contact": {
     "contact": "Contact"
   }
