--- a/locales/de.json
+++ b/locales/de.json
@@ -26,6 +26,9 @@
     "skillHoverAdmiral": "Wähle deinen Admiral. Fahren Sie mit der Maus über eine Fähigkeit",
     "skillHoverCowboy": "Wähle deinen Cowboy. Fahren Sie mit der Maus über eine Fähigkeit"
   },
+  "openSource": {
+    "openSource": "Open Source Beiträge"
+  },
   "contact": {
     "contact": "Kontakt"
   }
