chor: added de to project single & fixed res issues

--- a/locales/de.json
+++ b/locales/de.json
@@ -19,7 +19,11 @@
     "experience": "Erfahrung"
   },
   "project": {
-    "projects": "Projekte"
+    "projects": "Projekte",
+    "tech": "Technologie",
+    "description": "Beschreibung",
+    "features": "Funktionen",
+    "link": "Link"
   },
   "skills": {
     "skills": "Fähigkeiten",
